--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.4",
     "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.1",
     "gulp-watch": "^5.0.0"
   }
 }
